# tract

./: Cargo.toml
cli/src/: main.rs  params.rs
core/src/ops/: binary.rs
core/src/ops/cnn/conv/: conv.rs
core/src/ops/math/: mod.rs
core/src/ops/matmul/: lir_unary.rs
data/src/: tensor.rs
examples/onnx-mobilenet-v2/: .gitignore  Cargo.toml  typed_model_debug.txt
examples/onnx-mobilenet-v2/src/: main.rs
linalg/src/: arm64.rs  frame.rs  generic.rs  lib.rs
linalg/src/arm64/: arm64fp16.rs  arm64simd.rs
