[package]
name = "example-onnx-mobilenet-v2"
version = "0.20.7-pre"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
image.workspace = true
tract-onnx = { path = "../../onnx", version = "=0.21.6-pre" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tract-core = { path = "../../core", version = "=0.21.6-pre" }
